fixed bug on safari where SVG couldn't be redrawn after display: none; updated README.md

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 :root, body {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 body, input, button {
     font-family: "Barlow Semi Condensed medium";
@@ -111,7 +112,7 @@ body, input, button {
 }
 #rematch-btn {
     width: 221px;
-    height: 50px;
+    min-height: 50px;
     border: none;
     border-radius: 7px;
     color: var(--dark-text);
@@ -145,7 +146,7 @@ body, input, button {
     .app-container {
         height: 100%;
         display: grid;
-        grid-template-rows: repeat(20, minmax(8px, 1fr));
+        grid-template-rows: repeat(20, minmax(5px, 1fr));
         grid-template-columns: repeat(20, minmax(8px, 1fr));
     }
     .prompter {
@@ -182,14 +183,14 @@ body, input, button {
         grid-column: 3 / 19;
     }
     .selection-step {
-        max-width: 100%;
-        max-height: 100%;
         display: grid;
         grid-template-rows: repeat(13, minmax(8px, 1fr));
         grid-template-columns: repeat(16, minmax(8px, 1fr));
         justify-content: center;
     }
-    .selection-step svg {
+    #selection-wheel {
+        width: 100%;
+        height: 100%;
         grid-row: 1 / 11;
         grid-column: 1 / 18;
     }
@@ -225,11 +226,11 @@ body, input, button {
         grid-row: 1 / 7;
         grid-column: 1 / 7;
     }
-    .side-body svg {
+    .token-pick {
         transform: scale(1.5);
     }
     .round-result {
-        grid-row: 9 / 14;
+        grid-row: 9 / 13;
         grid-column: 4 / 14;
     }
     .rules {
@@ -306,9 +307,11 @@ body, input, button {
         display: flex;
         justify-content: center;
     }
-    .selection-step svg{
-        width: 500px;
-        height: 500px;
+    #selection-wheel {
+        min-width: 500px;
+        min-height: 500px;
+        max-width: 520px;
+        max-height: 520px;
     }
     .results-step {
         width: 100%;
@@ -342,8 +345,9 @@ body, input, button {
         grid-row: 1 / 7;
         grid-column: 1 / 7;
     }
-    .side-body svg {
+    .token-pick {
         pointer-events: none;
+        touch-action: none;
         transform: scale(1.2);
     }
     .round-result {
@@ -434,7 +438,7 @@ body, input, button {
         display: flex;
         justify-content: center;
     }
-    .selection-step svg{
+    #selection-wheel {
         width: 520px;
         height: 520px;
     }
@@ -478,13 +482,14 @@ body, input, button {
         grid-row: 2 / 10;
         grid-column: 1 / 6;
     }
-    .side-body svg {
+    .token-pick {
         width: 107px;
         height: 109px;
         transform: scale(5.5);
         grid-row: 4;
         grid-column: 3;
         pointer-events: none;
+        touch-action: none;
     }
     .round-result {
         min-width: 221px;
